# CLI-Coding-Assistant

./: .gitignore  README.md  agent.py  agent_helpers.py  agent_tools.py  ai_utils.py  config.py  main.py  manager.py  manager_helpers.py  manager_tools.py  memory.py  planner.py  planner_helpers.py  planner_tools.py  pyproject.toml  subagent.py  tests.py  token_tracker.py  worker.py  worker_helpers.py  worker_tools.py
functions/: create_directory.py  delete_file.py  edit_file.py  get_file_content.py  get_files_info.py  install_package.py  project_state.py  run_compiler.py  run_linter.py  run_python_file.py  web_search.py  write_file.py
